# uf-studio-client

./: .gitignore  .rust-analyzer.toml  .taurignore  README.md  bump.config.ts  index.html  latest.md  package.json  pnpm-lock.yaml  release.md  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
public/locals/cn/: home.json  system.json  updater.json
public/locals/en/: home.json  system.json  updater.json
scripts/: build-release-notes.mjs  generate-release-json.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: http.rs  mod.rs  request.rs  system.rs  tools.rs
src-tauri/src/desktops/: window.rs
src-tauri/src/state/: app_state.rs  mod.rs  threads.rs
src-tauri/src/utils/: response.rs
src/Studio/: Home.tsx  index.tsx
src/assets/css/: home.css
src/assets/icons/: iconfont.css  iconfont.js  iconfont.json
src/components/animate/: DragComponents.tsx  EntranceAnimations.tsx  PhysicsAnimations.tsx  ScrollAnimations.tsx  StaggeredAnimations.tsx  Transform3D.tsx  TransitionEffects.tsx  index.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  progress.tsx  sonner.tsx
src/hooks/: reduxHooks.ts  system.ts  tauri.ts  useDragDrop.ts  useScaleFactor.ts
src/lib/: async_lock.ts  constant.ts  i18n.ts  themes.ts  utils.ts
src/pages/Home/: index.tsx
src/pages/Layouts/: Container.tsx  (+2 more)
src/router/: animate.tsx  index.tsx  routes.tsx
src/store/: index.ts
src/utils/: response.rs
(+18 files in other folders)
