[package]
name = "UFACTORY-Studio"
version = "0.0.9"
description = "UFACTORY-Studio"
authors = ["Garmin"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ufactory_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }


[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono-tz = "0.8"
reqwest = "0.12.10"
chrono = "0.4"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
# URL 解析


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.0.0"
tauri-plugin-log = "2"
